fix: vertically align sidebar entries

--- a/src/components/deck-display/sidebar.module.css
+++ b/src/components/deck-display/sidebar.module.css
@@ -13,6 +13,7 @@
 .details {
   display: flex;
   flex-flow: row wrap;
+  align-items: flex-end;
   gap: 1rem;
   list-style: none;
 }
